fix: set list item paddings to 6px and fix ios bottom bar overlapping the ui

--- a/src/app/manage/text-detail/basic-text-view/basic-text-view.component.scss
+++ b/src/app/manage/text-detail/basic-text-view/basic-text-view.component.scss
@@ -1,3 +1,7 @@
 div {
     padding-top: 5px;
+
+    p:first-child {
+        margin-top: 5px;
+    }
 }
