--- a/src/app/speak/folder-list/text-list/record-view/record-view.page.scss
+++ b/src/app/speak/folder-list/text-list/record-view/record-view.page.scss
@@ -2,10 +2,11 @@ ion-tabs {
     display: none;
 }
 
+ion-content h1 {
+	margin-bottom: 15px;
+}  
+
 .recordSentences {
-    position: relative;
-    margin-top: 70px;
-    box-sizing: border-box;
     overflow-y: auto;
 }
 
@@ -14,41 +15,25 @@ ion-tabs {
     background: var(--ion-color-primary-contrast);
 }
 
-ion-content h1 {
-    position: fixed;
-    display: block;
-    background: var(--ion-color-light);
-    margin-top: 0;
-    margin-bottom: 0px;
-    margin-left: 0;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-    line-height: 30px;
-    height: 70px;
-    border-bottom: 2px solid #ccc;
-}
-
 ion-content div {
     &.noRecording {
         height: calc(100% - 70px);
 
         .recordSentences {
-            height: calc(100% - 123px);
+            height: calc(100% - 83px);
         }
         .recordFooter {
-            height: 123px;
+            height: 143px;
         }
     }
     &.hasRecording {
         height: calc(100% - 70px);
 
         .recordSentences {
-            height: calc(100% - 183px);
+            height: calc(100% - 143px);
         }
         .recordFooter {
-            height: 183px; // 120px record buttons + 60px play bar + 3px progress bar
+            height: 203px; // 140px record buttons + 60px play bar + 3px progress bar
         }
     }
 }
