--- a/src/global.scss
+++ b/src/global.scss
@@ -36,8 +36,8 @@ ion-item.ion-valid.item-has-focus {
 /* end fix */
 
 ion-item {
-    --padding-top: 10px;
-    --inner-padding-bottom: 10px;
+    --padding-top: 6px;
+    --inner-padding-bottom: 6px;
 }
 
 ion-content h1 {
